0MQ version 4.1.1 rc2, released on 2014/12/xx
=============================================

* Fixed #1208 - fix recursion in automake packaging

* Fixed #1224 - crash when processing empty unsubscribe message.

* Fixed #1213 - properties files were missing from source packages.

* Fixed #1273 - V3 protocol handler vulnerable to downgrade attacks.

* Fixed #1347 - lack way to get peer address.

* Fixed #1362 - SUB socket sometimes fails to resubscribe properly.

* Fixed #1377, #1144 - failed with WSANOTINITIALISED in some cases.

* Fixed #1389 - PUB, PUSH sockets had slow memory leak.


0MQ version 4.1.0 rc1, released on 2014/10/14
=============================================

* All issues that were fixed in 4.0.x

* Improved client reconnection strategy on errors

* GSSAPI security mechanism

* SOCKS5 support (ZMQ_SOCKS_PROXY)

* ZMQ_ROUTER_HANDOVER

* ZMQ_TOS

* ZMQ_CONNECT_RID

* ZMQ_HANDSHAKE_IVL

* ZMQ_IDENTITY_FD

* ZMQ_XPUB_NODROP

* ZMQ_SRCFD and ZMQ_SHARED message options

* Message metadata -- zmq_msg_gets ()

* Probe library configuration -- zmq_has ()


0MQ version 4.0.5 stable, released on 2014/10/14
================================================

* Fixed #1191; CURVE mechanism does not verify short term nonces.

* Fixed #1190; stream_engine is vulnerable to downgrade attacks.

* Fixed #1088; assertion failure for WSAENOTSOCK on Windows.

* Fixed #1015; race condition while connecting inproc sockets.

* Fixed #994; bump so library number to 4.0.0

* Fixed #939, assertion failed: !more (fq.cpp:99) after many ZAP requests.

* Fixed #872; lost first part of message over inproc://.

* Fixed #797, keep-alive on Windows.


0MQ version 4.0.4 stable, released on 2014/03/10
================================================

Bug Fixes
---------

* Fixed #909; out of tree build issue on Linux.

* Fixed #888; hangs on terminate when inproc connected but never bound.

* Fixed #868; assertion failure at ip.cpp:137 when using port scanner.
